--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dart.flutterSdkPath": "\\Users\\RADEN\\fvm\\versions\\1.22.6"
+    "dart.flutterSdkPath": "C:\\Users\\RADEN\\fvm\\versions\\2.10.4"
 }
