--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,7 @@
 name: shared_preferences
 description: A new Flutter project.
 
-
-
-publish_to: 'none' 
-
-
-
-
-
-
-
-
-
-
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -23,53 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  
-  
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-
-
-
 flutter:
-
-  
-  
-  
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
