--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.16.2 <3.0.0"
 dependencies:
+  shared_preferences: ^2.0.8
   flutter:
     sdk: flutter
 
